--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,42 @@
 .App {
-  height: 80vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
 }
 
-.card {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid #000; */
-  padding: 16px;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.button {
-  padding: 10px;
-  color: #000;
-  background-color: #fff;
-  text-transform: uppercase;
-  font-size: 14px;
-  outline: none;
-  border-radius: 10px;
-  border: 1px solid #000;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 20px;
+.App-link {
+  color: #61dafb;
 }
 
-.heading {
-  font-size: 22px;
-  font-weight: 600;
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.detail {
-  display: block;
+.AdminPortalCustom{
+  height: 10%;
 }
